# whisperplot

./: CMakeLists.txt  README.md
chiapos_inc/: bits.hpp  encoding.hpp  entry_sizes.hpp  pos_constants.hpp  util.hpp
chiapos_inc/b3/: blake3_dispatch.c
experiments/: outputStreamCountTest.cpp
inc/: atomic_bitpacker.hpp  bitcopy.hpp  bucket_page_index.hpp  buffer.hpp  buffers.hpp  calculate_bucket.hpp  chiapos_util.hpp  explicit_templates.hpp  packed_array.hpp  park.hpp  penguin.hpp  penguin_entries.hpp  penguin_unloaders.hpp  phase1.hpp  plotconf.hpp  plotter.hpp  status_update.hpp  thread_mgr.hpp
src/: buffer.cpp  buffers.cpp  calculate_bucket.cpp  check.cpp  create.cpp  encoding.cpp  main.cpp  phase1.cpp  phase2.cpp  phase3.cpp  phase4.cpp  prove.cpp  read.cpp  reverse_pass.cpp  status_update.cpp  util.cpp
